Modified Changelog. Add the mails and original websites to the url file
Modified Changelog.
Add the mails and original websites to the url file from the tutorials.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-19 scizzo <scizzo@gimp.org>
+
+	* /admin/gimp-web-urls: Add the mails and original websites to the url
+	file from the tutorials.
+
 2003-03-07  Helvetix Victorinox  <helvetix@oak.mysterious.org>
 
         * Made tiny wordsmithing to Carol's how-to how-to in
