--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@
 	* style/old-default.css: This is the old default.css file.
 	
 	* style/default.css: Add a new updated and cleaned up css file. Hope
-	  this looks better then the old one.
+	  this looks better then the old one. Bug fix. Images where not
+	  centered with the <p class="images"></p>.
 
 2003-03-21 scizzo <scizzo@gimp.org>
 
