--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-09 scizzo <scizzo@gimp.org>
+
+	* tutorials/*: Now uses <image> Filter -> Path instead of
+	  <image>Filter->Path to make it more visible. Fixed a few
+	  broken links. Add the original tutorial link to Custom_Brushes.
+
 2003-04-09  Carol Spears  <carol@gimp.org>
 
         * admin/gimp-web-urls, added some, fixed others.
