--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-04-10  Carol Spears  <carol@gimp.org>
 
+        * os2/howtos/install_gimp_xfree86.html, missing </a>.
+
+2003-04-10  Carol Spears  <carol@gimp.org>
+
         * admin/gimp-web-urls, typos.
         * os2/howtos/install_font_xfree86.html, typos.
         * os2/howtos/install_gimp_xfree86.html, typos.
