--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2003-04-10 scizzo <scizzo@gimp.org>
 
 	* todo.xhtml: This file was a duplicate of the todo.xhtml in admin.
+	* styles/default.css: Added 3 warning <em> classes. caution,warn and
+	hellbrokeloose.
 
 2003-04-10  Carol Spears  <carol@gimp.org>
 
