os2/howtos/tile_cache.htrw, combined some authors and made a new howto.
* os2/howtos/tile_cache.htrw, combined some authors and made a new howto.
* os2/index.htrw, added useful mail list urls.
* os2/howtos/install_font_xfree86.htrw, edited content some.
* os2/howtos/install_gimp_xfree86.htrw, edited content some.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-04-12  Carol Spears  <carol@gimp.org>
 
+    * os2/howtos/tile_cache.htrw, combined some authors and made a new howto.
+    * os2/index.htrw, added useful mail list urls.
+    * os2/howtos/install_font_xfree86.htrw, edited content some.
+    * os2/howtos/install_gimp_xfree86.htrw, edited content some.
+
+2003-04-12  Carol Spears  <carol@gimp.org>
+
     * mail_lists.htrw, added this file, freed it from the .inc file.
     * mail_lists.html, removed this file.
     * os2/index.htrw, added useful mail list urls.
