--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-13  Carol Spears  <carol@gimp.org>
+
+    * team.html, removed this file.
+    * team.htrw, added this file.
+    * admin/gimp-web-urls, edited, added and such.
+
 2003-04-13 scizzo <scizzo@gimp.org>
 
     * admin/gimp-web-urls: Fixed the link to syngins main website.
