Modified ChangeLog. Fixed a problem with the validation link not falling
Modified ChangeLog.
Fixed a problem with the validation link not falling to the bottom of the site.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,13 @@
 2003-04-13 scizzo <scizzo@gimp.org>
 
-	* tutorials/Basic_Perl/index.html: Removed this file.
-	* tutorials/Basic_Perl/index.htrw: Add this file. Fixed a few minor
+	* /includes/wgo-xhtml-fini.xhtml: Fixed a problem with the validation
+	link not falling to the bottom of the site.
+
+	* /tutorials/Basic_Perl/index.html: Removed this file.
+	* /tutorials/Basic_Perl/index.htrw: Add this file. Fixed a few minor
 	tags in the file.
 
-	* admin/gimp-web-urls: Add People-Lehmann_Marc to the links.
+	* /admin/gimp-web-urls: Add People-Lehmann_Marc to the links.
 
 2003-04-13  Helvetix Victorinox  <helvetix@mysterious.org>
 
