Modified ChangeLog. Add this file. Fixed a few tag problems. Removed this
Modified ChangeLog.
Add this file. Fixed a few tag problems.
Removed this file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
 	* /tutorials/Basic_Perl/index.html: Removed this file.
 	* /tutorials/Basic_Perl/index.htrw: Add this file. Fixed a few minor
 	tags in the file.
+	* /tutorials/Basic_Scheme/index.html: Removed this file.
+	* /tutorials/Basic_Scheme/index.htrw: Add this file. Fixed a few tag
+	problems. 
 
 	* /admin/gimp-web-urls: Add People-Lehmann_Marc to the links.
 
