--- a/ChangeLog
+++ b/ChangeLog
@@ -8,7 +8,7 @@
 	tags in the file.
 	* /tutorials/Basic_Scheme/index.html: Removed this file.
 	* /tutorials/Basic_Scheme/index.htrw: Add this file. Fixed a few tag
-	problems. 
+	problems. Another tag problem with <dl compact>, changed to only <dl>.
 
 	* /admin/gimp-web-urls: Add People-Lehmann_Marc to the links.
 
