Modified ChangeLog. Add this file. Removed this file.
Modified ChangeLog.
Add this file.
Removed this file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 	* /tutorials/Basic_Scheme2/index.htrw: Add this file.
 	* /tutorials/Bezier_Selections/index.html: Removed this file.
 	* /tutorials/Bezier_Selections/index.htrw: Add this file.
+	* /tutorials/Blending_Exposures/index.html: Removed this file.
+	* /tutorials/Blending_Exposures/index.htrw: Add this file.
 
 	* /tutorials/Advanced_Animations/index.htrw,
 	* /tutorials/Basic_Perl/index.htrw,
