/admin/gimp-maintainers, added this file
* /admin/gimp-maintainers, added this file

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-04-15 scizzo <scizzo@gimp.org>
 
+	* /admin/gimp-maintainers, added this file
+
+2003-04-15 scizzo <scizzo@gimp.org>
+
 	* /tutorials/Blown_Out_Highlights/index.html,
 	* /tutorials/Blur_Overlays/index.html,
 	* /tutorials/Borders_On_Selections/index.html,
