/admin/gimp-web-urls, added the attributes for the images in the books
* /admin/gimp-web-urls, added the attributes for the images in the books section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-04-16 carol <cspears@cablespeed.com>
 
+	* /admin/gimp-web-urls, added the attributes for the images in the books 
+      section
+
+2003-04-16 carol <cspears@cablespeed.com>
+
 	* /admin/gimp-maintainers, added this file
 
 2003-04-15 scizzo <scizzo@gimp.org>
